Closed Bug 877976 Opened 11 years ago Closed 11 years ago

getTextAtOffset line boundary fails on last line of the document

Categories

(Core :: Disability Access APIs, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla25

People

(Reporter: surkov, Assigned: surkov)

References

Details

(Keywords: access)

Attachments

(1 file)

Attached patch patchSplinter Review
      No description provided.
Attachment #756397 - Flags: review?(trev.saunders)
Summary: getTextAtOffset line boundary fails on last line in document → getTextAtOffset line boundary fails on last line of the document
Blocks: 882281
No longer blocks: getText*a11y
Attachment #756397 - Flags: review?(trev.saunders)
https://hg.mozilla.org/mozilla-central/rev/b9734ba18393
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla25
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: