Bug 877976 - getTextAtOffset line boundary fails on last line of the document, r=tbsaunde